<resources>
    <string name="app_name">SmartParking</string>
    <string name="welcome_to_smart_parking">Welcome to Smart Parking</string>
    <string name="select_location_for_check_availabilities">Select Location for Check Availabilities</string>
    <string name="show_results">Show Results</string>
    <string name="total_slots">Total Slots</string>
    <string name="availability">Availability</string>
    <string name="booking">Booking</string>
    <string name="slot_1">Slot 1</string>
    <string name="slot_2">Slot 2</string>
    <string name="book_now">Book Now</string>
    <string name="booked">Booked</string>
</resources>
