<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:fontFamily="casual"
            android:gravity="center_horizontal"
            android:text="@string/welcome_to_smart_parking"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="35sp"
            android:textStyle="bold"
            tools:targetApi="jelly_bean" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20sp"
                    android:text="@string/select_location_for_check_availabilities"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/spinner_bg"
                    android:padding="3dp">

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_gravity="center" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@android:color/holo_purple"
                    android:fontFamily="sans-serif"
                    android:text="@string/show_results"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    tools:targetApi="lollipop" />

                <LinearLayout
                    android:id="@+id/result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-black"
                            android:gravity="center_horizontal"
                            android:text="@string/total_slots"
                            android:textAlignment="center"
                            android:textColor="@android:color/holo_purple"
                            android:textSize="21sp"
                            tools:targetApi="jelly_bean" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/availability"
                            android:textColor="@android:color/holo_orange_dark"
                            android:textSize="21sp"
                            tools:targetApi="jelly_bean" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/booking"
                            android:textColor="@android:color/holo_purple"
                            android:textSize="21sp"
                            tools:targetApi="jelly_bean" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/slot_1"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/slot1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text=""
                            android:textSize="25sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/slot_2"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/slot2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text=""
                            android:textSize="25sp" />

                    </LinearLayout>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="5dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:gravity="center_horizontal"
                                android:text="@string/slot_1"
                                android:textAlignment="center"
                                android:textColor="@android:color/black"
                                android:textSize="18sp"
                                tools:targetApi="jelly_bean" />

                            <TextView
                                android:id="@+id/slot3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/idTVBookNowSlot1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/button_book_now_bg"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/book_now"
                                android:textColor="@android:color/white"
                                android:textSize="18sp"
                                tools:targetApi="jelly_bean" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="15dp"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="5dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:gravity="center_horizontal"
                                android:text="@string/slot_2"
                                android:textAlignment="center"
                                android:textColor="@android:color/black"
                                android:textSize="18sp"
                                tools:targetApi="jelly_bean" />

                            <TextView
                                android:id="@+id/slot4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:text=""
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/idTVBookNowSlot2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/button_book_now_bg"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/book_now"
                                android:textColor="@android:color/white"
                                android:textSize="18sp"
                                tools:targetApi="jelly_bean" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>